--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,15 +1,10 @@
 @import './../../styles.scss';
 
 .main-frame {
-    width: 1440px;
-   // height: 100vh;
+    max-width: 1440px;
     background-color: #FFFCF3;
-    box-sizing: border-box;
-    //padding: 0 20px; 
-    margin: 0;
-    //overflow-x: hidden;
+    //box-sizing: border-box;
+    overflow: hidden;
+    scrollbar-width: none; 
     @include dFlex($jc:flex-start);
-    @media (max-width: 1440px) {
-        width: 100%;        
-    }
 }
