--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -39,18 +39,25 @@
     height: auto; //592px;
     padding: 4vw;
     max-width: 80%;
-    gap: 5.4vw; //78px of 1440px
+    //gap: 5.4vw; //78px of 1440px
+    @include dFlex();
+    border: 4px solid black;
+
+
+}
+
+.img-frame {
     display: flex;
     flex-wrap: wrap;
-    border: 4px solid black;
-    justify-content: space-around;
-
+    justify-content: center;
+    align-items: flex-start;
     img {
         width: 9vw;
-        height: fit-content;
-        object-fit: cover;
+        height: 9vw;// fit-content;
+        margin: 4vw;
         @media (max-width:450px) {
             width: 52px;
+            height: 52px;
         }
     }
 }
