--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,17 @@
 
 @import './font-styles.scss';
+html {
+    overflow: auto;
+    scrollbar-width: none; /* Für Firefox */
+    background-color: black;
+}
+
+html::-webkit-scrollbar {
+    display: none; /* Für Webkit-Browser */
+}
 
 body {
     background-color: black;
-    width: 100%;
-    //height: 100vh;
     margin: 0;
     overflow-x: hidden;
     scroll-behavior: smooth;
@@ -13,6 +20,7 @@ body {
     align-items: center;
     flex-direction: column;
     font-family: 'Overpass', sans-serif;
+    scrollbar-width: none !important; 
 }
 
 p,
@@ -24,14 +32,14 @@ span {
     color: #FF9900;
 }
 
-@mixin subTitle() {
+@mixin subTitle($ta: center) {
     //width: 100%;
     font-family: 'Syne', sans-serif;
     font-weight: 800;
     font-size: 5.42vw; // font-size:78px for .main-frame.width: 1440px in vw
     line-height: 5.42vw;
     letter-spacing: 1%;
-    text-align: center;
+    text-align: $ta;
 
 
     @media (max-width:1440px) {
